src/Antlr/ExpressionParser.java
// Generated from Expression.g4 by ANTLR 4.13.1

    package Antlr;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class ExpressionParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		TYPE=10, STRING=11, VARIABLE=12, INT=13, FLOAT=14, MINUS=15, PLUS=16, 
		DIVISION=17, MULTIPLICATION=18, INTDIVISION=19, EXPONENTIAL=20, MODULE=21, 
		CONDITIONALS=22, SMALLER=23, SMALLEREQ=24, BIGGER=25, BIGGEREQ=26, DIFFERENT=27, 
		EQUALS=28, IF=29, ELIF=30, ELSE=31, DEF=32, WHILE=33, FOR=34, RETURN=35, 
		COMMENT=36, WS=37, INDENT=38, DEDENT=39, NEWLINE=40;
	public static final int
		RULE_prog = 0, RULE_statement = 1, RULE_expr = 2;
	private static String[] makeRuleNames() {
		return new String[] {
			"prog", "statement", "expr"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "','", "'='", "'('", "')'", "':'", "'in'", "'range('", "'['", "']'", 
			null, null, null, null, null, "'-'", "'+'", "'/'", "'*'", "'//'", "'**'", 
			"'%'", null, "'<'", "'<='", "'>'", "'>='", "'!='", "'=='", "'if'", "'elif'", 
			"'else'", "'def'", "'while'", "'for'", "'return'", null, null, "' '", 
			"'\\n'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, "TYPE", "STRING", 
			"VARIABLE", "INT", "FLOAT", "MINUS", "PLUS", "DIVISION", "MULTIPLICATION", 
			"INTDIVISION", "EXPONENTIAL", "MODULE", "CONDITIONALS", "SMALLER", "SMALLEREQ", 
			"BIGGER", "BIGGEREQ", "DIFFERENT", "EQUALS", "IF", "ELIF", "ELSE", "DEF", 
			"WHILE", "FOR", "RETURN", "COMMENT", "WS", "INDENT", "DEDENT", "NEWLINE"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Expression.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public ExpressionParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgContext extends ParserRuleContext {
		public ProgContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_prog; }
	 
		public ProgContext() { }
		public void copyFrom(ProgContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class ProgramContext extends ProgContext {
		public TerminalNode EOF() { return getToken(ExpressionParser.EOF, 0); }
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public ProgramContext(ProgContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ExpressionListener ) ((ExpressionListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ExpressionListener ) ((ExpressionListener)listener).exitProgram(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ExpressionVisitor ) return ((ExpressionVisitor<? extends T>)visitor).visitProgram(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgContext prog() throws RecognitionException {
		ProgContext _localctx = new ProgContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_prog);
		int _la;
		try {
			_localctx = new ProgramContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(9);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 64961385472L) != 0)) {
				{
				{
				setState(6);
				statement();
				}
				}
				setState(11);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(12);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class StatementContext extends ParserRuleContext {
		public StatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement; }
	 
		public StatementContext() { }
		public void copyFrom(StatementContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class FunctionDeclarationContext extends StatementContext {
		public TerminalNode DEF() { return getToken(ExpressionParser.DEF, 0); }
		public List<TerminalNode> VARIABLE() { return getTokens(ExpressionParser.VARIABLE); }
		public TerminalNode VARIABLE(int i) {
			return getToken(ExpressionParser.VARIABLE, i);
		}
		public TerminalNode NEWLINE() { return getToken(ExpressionParser.NEWLINE, 0); }
		public TerminalNode INDENT() { return getToken(ExpressionParser.INDENT, 0); }
		public TerminalNode DEDENT() { return getToken(ExpressionParser.DEDENT, 0); }
		public List<TerminalNode> TYPE() { return getTokens(ExpressionParser.TYPE); }
		public TerminalNode TYPE(int i) {
			return getToken(ExpressionParser.TYPE, i);
		}
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public FunctionDeclarationContext(StatementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ExpressionListener ) ((ExpressionListener)listener).enterFunctionDeclaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ExpressionListener ) ((ExpressionListener)listener).exitFunctionDeclaration(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ExpressionVisitor ) return ((ExpressionVisitor<? extends T>)visitor).visitFunctionDeclaration(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class ReturnContext extends StatementContext {
		public TerminalNode RETURN() { return getToken(ExpressionParser.RETURN, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public ReturnContext(StatementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ExpressionListener ) ((ExpressionListener)listener).enterReturn(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ExpressionListener ) ((ExpressionListener)listener).exitReturn(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ExpressionVisitor ) return ((ExpressionVisitor<? extends T>)visitor).visitReturn(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class ForContext extends StatementContext {
		public TerminalNode FOR() { return getToken(ExpressionParser.FOR, 0); }
		public List<TerminalNode> VARIABLE() { return getTokens(ExpressionParser.VARIABLE); }
		public TerminalNode VARIABLE(int i) {
			return getToken(ExpressionParser.VARIABLE, i);
		}
		public TerminalNode NEWLINE() { return getToken(ExpressionParser.NEWLINE, 0); }
		public TerminalNode INDENT() { return getToken(ExpressionParser.INDENT, 0); }
		public TerminalNode DEDENT() { return getToken(ExpressionParser.DEDENT, 0); }
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public ForContext(StatementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ExpressionListener ) ((ExpressionListener)listener).enterFor(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ExpressionListener ) ((ExpressionListener)listener).exitFor(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ExpressionVisitor ) return ((ExpressionVisitor<? extends T>)visitor).visitFor(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class IfClauseContext extends StatementContext {
		public TerminalNode IF() { return getToken(ExpressionParser.IF, 0); }
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public List<TerminalNode> INDENT() { return getTokens(ExpressionParser.INDENT); }
		public TerminalNode INDENT(int i) {
			return getToken(ExpressionParser.INDENT, i);
		}
		public List<TerminalNode> DEDENT() { return getTokens(ExpressionParser.DEDENT); }
		public TerminalNode DEDENT(int i) {
			return getToken(ExpressionParser.DEDENT, i);
		}
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public List<TerminalNode> ELIF() { return getTokens(ExpressionParser.ELIF); }
		public TerminalNode ELIF(int i) {
			return getToken(ExpressionParser.ELIF, i);
		}
		public TerminalNode ELSE() { return getToken(ExpressionParser.ELSE, 0); }
		public IfClauseContext(StatementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ExpressionListener ) ((ExpressionListener)listener).enterIfClause(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ExpressionListener ) ((ExpressionListener)listener).exitIfClause(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ExpressionVisitor ) return ((ExpressionVisitor<? extends T>)visitor).visitIfClause(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class ImplicitDeclarationContext extends StatementContext {
		public List<TerminalNode> VARIABLE() { return getTokens(ExpressionParser.VARIABLE); }
		public TerminalNode VARIABLE(int i) {
			return getToken(ExpressionParser.VARIABLE, i);
		}
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public ImplicitDeclarationContext(StatementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ExpressionListener ) ((ExpressionListener)listener).enterImplicitDeclaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ExpressionListener ) ((ExpressionListener)listener).exitImplicitDeclaration(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ExpressionVisitor ) return ((ExpressionVisitor<? extends T>)visitor).visitImplicitDeclaration(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class WhileContext extends StatementContext {
		public TerminalNode WHILE() { return getToken(ExpressionParser.WHILE, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public TerminalNode NEWLINE() { return getToken(ExpressionParser.NEWLINE, 0); }
		public TerminalNode INDENT() { return getToken(ExpressionParser.INDENT, 0); }
		public TerminalNode DEDENT() { return getToken(ExpressionParser.DEDENT, 0); }
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public WhileContext(StatementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ExpressionListener ) ((ExpressionListener)listener).enterWhile(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ExpressionListener ) ((ExpressionListener)listener).exitWhile(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ExpressionVisitor ) return ((ExpressionVisitor<? extends T>)visitor).visitWhile(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class ExplicitDeclarationContext extends StatementContext {
		public TerminalNode TYPE() { return getToken(ExpressionParser.TYPE, 0); }
		public List<TerminalNode> VARIABLE() { return getTokens(ExpressionParser.VARIABLE); }
		public TerminalNode VARIABLE(int i) {
			return getToken(ExpressionParser.VARIABLE, i);
		}
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public ExplicitDeclarationContext(StatementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ExpressionListener ) ((ExpressionListener)listener).enterExplicitDeclaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ExpressionListener ) ((ExpressionListener)listener).exitExplicitDeclaration(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ExpressionVisitor ) return ((ExpressionVisitor<? extends T>)visitor).visitExplicitDeclaration(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StatementContext statement() throws RecognitionException {
		StatementContext _localctx = new StatementContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_statement);
		int _la;
		try {
			int _alt;
			setState(169);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case TYPE:
				_localctx = new ExplicitDeclarationContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(14);
				match(TYPE);
				setState(15);
				match(VARIABLE);
				setState(20);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==T__0) {
					{
					{
					setState(16);
					match(T__0);
					setState(17);
					match(VARIABLE);
					}
					}
					setState(22);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(32);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==T__1) {
					{
					setState(23);
					match(T__1);
					setState(24);
					expr(0);
					setState(29);
					_errHandler.sync(this);
					_la = _input.LA(1);
					while (_la==T__0) {
						{
						{
						setState(25);
						match(T__0);
						setState(26);
						expr(0);
						}
						}
						setState(31);
						_errHandler.sync(this);
						_la = _input.LA(1);
					}
					}
				}

				}
				break;
			case VARIABLE:
				_localctx = new ImplicitDeclarationContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(34);
				match(VARIABLE);
				setState(35);
				match(T__1);
				setState(36);
				expr(0);
				setState(43);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==T__0) {
					{
					{
					setState(37);
					match(T__0);
					setState(38);
					match(VARIABLE);
					setState(39);
					match(T__1);
					setState(40);
					expr(0);
					}
					}
					setState(45);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
				break;
			case DEF:
				_localctx = new FunctionDeclarationContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(46);
				match(DEF);
				setState(48);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==TYPE) {
					{
					setState(47);
					match(TYPE);
					}
				}

				setState(50);
				match(VARIABLE);
				setState(51);
				match(T__2);
				setState(66);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==TYPE || _la==VARIABLE) {
					{
					setState(53);
					_errHandler.sync(this);
					_la = _input.LA(1);
					if (_la==TYPE) {
						{
						setState(52);
						match(TYPE);
						}
					}

					setState(55);
					match(VARIABLE);
					setState(63);
					_errHandler.sync(this);
					_la = _input.LA(1);
					while (_la==T__0) {
						{
						{
						setState(56);
						match(T__0);
						setState(58);
						_errHandler.sync(this);
						_la = _input.LA(1);
						if (_la==TYPE) {
							{
							setState(57);
							match(TYPE);
							}
						}

						setState(60);
						match(VARIABLE);
						}
						}
						setState(65);
						_errHandler.sync(this);
						_la = _input.LA(1);
					}
					}
				}

				setState(68);
				match(T__3);
				setState(69);
				match(T__4);
				setState(70);
				match(NEWLINE);
				setState(71);
				match(INDENT);
				setState(73); 
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					{
					setState(72);
					statement();
					}
					}
					setState(75); 
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & 64961385472L) != 0) );
				setState(77);
				match(DEDENT);
				}
				break;
			case IF:
				_localctx = new IfClauseContext(_localctx);
				enterOuterAlt(_localctx, 4);
				{
				setState(79);
				match(IF);
				setState(80);
				expr(0);
				setState(81);
				match(T__4);
				setState(91);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case INDENT:
					{
					setState(82);
					match(INDENT);
					setState(84); 
					_errHandler.sync(this);
					_la = _input.LA(1);
					do {
						{
						{
						setState(83);
						statement();
						}
						}
						setState(86); 
						_errHandler.sync(this);
						_la = _input.LA(1);
					} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & 64961385472L) != 0) );
					setState(88);
					match(DEDENT);
					}
					break;
				case TYPE:
				case VARIABLE:
				case IF:
				case DEF:
				case WHILE:
				case FOR:
				case RETURN:
					{
					setState(90);
					statement();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				setState(109);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,15,_ctx);
				while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
					if ( _alt==1 ) {
						{
						{
						setState(93);
						match(ELIF);
						setState(94);
						expr(0);
						setState(95);
						match(T__4);
						setState(105);
						_errHandler.sync(this);
						switch (_input.LA(1)) {
						case INDENT:
							{
							setState(96);
							match(INDENT);
							setState(98); 
							_errHandler.sync(this);
							_la = _input.LA(1);
							do {
								{
								{
								setState(97);
								statement();
								}
								}
								setState(100); 
								_errHandler.sync(this);
								_la = _input.LA(1);
							} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & 64961385472L) != 0) );
							setState(102);
							match(DEDENT);
							}
							break;
						case TYPE:
						case VARIABLE:
						case IF:
						case DEF:
						case WHILE:
						case FOR:
						case RETURN:
							{
							setState(104);
							statement();
							}
							break;
						default:
							throw new NoViableAltException(this);
						}
						}
						} 
					}
					setState(111);
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,15,_ctx);
				}
				setState(125);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,18,_ctx) ) {
				case 1:
					{
					setState(112);
					match(ELSE);
					setState(113);
					match(T__4);
					setState(123);
					_errHandler.sync(this);
					switch (_input.LA(1)) {
					case INDENT:
						{
						setState(114);
						match(INDENT);
						setState(116); 
						_errHandler.sync(this);
						_la = _input.LA(1);
						do {
							{
							{
							setState(115);
							statement();
							}
							}
							setState(118); 
							_errHandler.sync(this);
							_la = _input.LA(1);
						} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & 64961385472L) != 0) );
						setState(120);
						match(DEDENT);
						}
						break;
					case TYPE:
					case VARIABLE:
					case IF:
					case DEF:
					case WHILE:
					case FOR:
					case RETURN:
						{
						setState(122);
						statement();
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					}
					break;
				}
				}
				break;
			case WHILE:
				_localctx = new WhileContext(_localctx);
				enterOuterAlt(_localctx, 5);
				{
				setState(127);
				match(WHILE);
				setState(128);
				expr(0);
				setState(129);
				match(T__4);
				setState(130);
				match(NEWLINE);
				setState(131);
				match(INDENT);
				setState(133); 
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					{
					setState(132);
					statement();
					}
					}
					setState(135); 
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & 64961385472L) != 0) );
				setState(137);
				match(DEDENT);
				}
				break;
			case FOR:
				_localctx = new ForContext(_localctx);
				enterOuterAlt(_localctx, 6);
				{
				setState(139);
				match(FOR);
				setState(140);
				match(VARIABLE);
				setState(141);
				match(T__5);
				setState(155);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case VARIABLE:
					{
					setState(142);
					match(VARIABLE);
					}
					break;
				case T__6:
					{
					{
					setState(143);
					match(T__6);
					setState(144);
					expr(0);
					setState(151);
					_errHandler.sync(this);
					_la = _input.LA(1);
					if (_la==T__0) {
						{
						setState(145);
						match(T__0);
						setState(146);
						expr(0);
						setState(149);
						_errHandler.sync(this);
						_la = _input.LA(1);
						if (_la==T__0) {
							{
							setState(147);
							match(T__0);
							setState(148);
							expr(0);
							}
						}

						}
					}

					setState(153);
					match(T__3);
					}
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				setState(157);
				match(T__4);
				setState(158);
				match(NEWLINE);
				setState(159);
				match(INDENT);
				setState(161); 
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					{
					setState(160);
					statement();
					}
					}
					setState(163); 
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & 64961385472L) != 0) );
				setState(165);
				match(DEDENT);
				}
				break;
			case RETURN:
				_localctx = new ReturnContext(_localctx);
				enterOuterAlt(_localctx, 7);
				{
				setState(167);
				match(RETURN);
				setState(168);
				expr(0);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
